Fixed the footer by aligned the items properly

--- a/Styles/contactStyle.css
+++ b/Styles/contactStyle.css
@@ -171,7 +171,7 @@ header {
     align-items: center;
   }
   
-  .icon {
+  .contact-icon {
     width: 70px;
     height: 70px;
     margin-bottom: 10px;
@@ -183,7 +183,7 @@ header {
   }
   
     @media (max-width: 1320px) {
-    .icon {
+    .contact-icon {
       width: 60px;
       height: 60px;
     }
@@ -193,7 +193,7 @@ header {
   }
   
   @media (max-width: 1100px) {
-    .icon {
+    .contact-icon {
       width: 55px;
       height: 55px;
     }
@@ -208,7 +208,7 @@ header {
       align-items: center;
       gap: 25px;
     }
-    .icon {
+    .contact-icon {
       width: 50px;
       height: 50px;
     }
@@ -257,12 +257,11 @@ header {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    gap: 8px;
 }
 
 .icon {
     color: #ffc107;
-    font-size: 18px;
+    margin-right: 8px;
 }
 
 .website-link {
